--- a/docs/docs-ref-autogen/excel/excel/excel.rowcolumnpivothierarchycollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.rowcolumnpivothierarchycollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.RowColumnPivotHierarchyCollection:class'
     summary: |-
-      <span data-ttu-id="c56b8-101">代表与数据透视表相关联的 RowColumnPivotHierarchy 项目的集合。</span><span class="sxs-lookup"><span data-stu-id="c56b8-101">Represents a collection of RowColumnPivotHierarchy items associated with the PivotTable.</span></span>
+      代表与数据透视表相关联的 RowColumnPivotHierarchy 项目的集合。
 
-      <span data-ttu-id="c56b8-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c56b8-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.RowColumnPivotHierarchyCollection
     fullName: Excel.RowColumnPivotHierarchyCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.RowColumnPivotHierarchyCollection#add:member(1)'
@@ -27,9 +27,9 @@ items:
       - 'excel!Excel.RowColumnPivotHierarchyCollection#toJSON:member(1)'
   - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#add:member(1)'
     summary: |-
-      <span data-ttu-id="c56b8-103">将 PivotHierarchy 添加到当前轴。</span><span class="sxs-lookup"><span data-stu-id="c56b8-103">Adds the PivotHierarchy to the current axis.</span></span> <span data-ttu-id="c56b8-104">如果行、列或筛选轴上的其他位置存在层次结构，则会将该层次结构从相应的位置移除。</span><span class="sxs-lookup"><span data-stu-id="c56b8-104">If the hierarchy is present elsewhere on the row, column, or filter axis, it will be removed from that location.</span></span>
+      将 PivotHierarchy 添加到当前轴。 如果行、列或筛选轴上的其他位置存在层次结构，则会将该层次结构从相应的位置移除。
 
-      <span data-ttu-id="c56b8-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c56b8-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: add(pivotHierarchy)
     fullName: add(pivotHierarchy)
     langs:
@@ -47,7 +47,7 @@ items:
           type:
             - 'excel!Excel.PivotHierarchy:class'
   - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#context:member'
-    summary: <span data-ttu-id="c56b8-106">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="c56b8-106">The request context associated with the object.</span></span> <span data-ttu-id="c56b8-107">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="c56b8-107">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -60,9 +60,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="c56b8-108">获取集合中的透视层级结构的数量。</span><span class="sxs-lookup"><span data-stu-id="c56b8-108">Gets the number of pivot hierarchies in the collection.</span></span>
+      获取集合中的透视层级结构的数量。
 
-      <span data-ttu-id="c56b8-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c56b8-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -76,9 +76,9 @@ items:
         description: ''
   - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="c56b8-110">按名称或 ID 获取 RowColumnPivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="c56b8-110">Gets a RowColumnPivotHierarchy by its name or id.</span></span>
+      按名称或 ID 获取 RowColumnPivotHierarchy。
 
-      <span data-ttu-id="c56b8-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c56b8-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(name)
     fullName: getItem(name)
     langs:
@@ -92,14 +92,14 @@ items:
         description: ''
       parameters:
         - id: name
-          description: <span data-ttu-id="c56b8-112">要检索的 RowColumnPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="c56b8-112">Name of the RowColumnPivotHierarchy to be retrieved.</span></span>
+          description: 要检索的 RowColumnPivotHierarchy 的名称。
           type:
             - string
   - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#getItemOrNullObject:member(1)'
     summary: |-
-      <span data-ttu-id="c56b8-113">按名称获取 RowColumnPivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="c56b8-113">Gets a RowColumnPivotHierarchy by name.</span></span> <span data-ttu-id="c56b8-114">如果 RowColumnPivotHierarchy 不存在，则返回 Null 对象。</span><span class="sxs-lookup"><span data-stu-id="c56b8-114">If the RowColumnPivotHierarchy does not exist, will return a null object.</span></span>
+      按名称获取 RowColumnPivotHierarchy。 如果 RowColumnPivotHierarchy 不存在，则返回 Null 对象。
 
-      <span data-ttu-id="c56b8-115">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c56b8-115">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemOrNullObject(name)
     fullName: getItemOrNullObject(name)
     langs:
@@ -113,11 +113,11 @@ items:
         description: ''
       parameters:
         - id: name
-          description: <span data-ttu-id="c56b8-116">要检索的 RowColumnPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="c56b8-116">Name of the RowColumnPivotHierarchy to be retrieved.</span></span>
+          description: 要检索的 RowColumnPivotHierarchy 的名称。
           type:
             - string
   - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#items:member'
-    summary: <span data-ttu-id="c56b8-117">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="c56b8-117">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -129,7 +129,7 @@ items:
         type:
           - 'excel!Excel.RowColumnPivotHierarchyCollection#items~0:complex'
   - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#load:member(1)'
-    summary: <span data-ttu-id="c56b8-118">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="c56b8-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c56b8-119">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="c56b8-119">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -143,11 +143,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="c56b8-120">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="c56b8-120">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.RowColumnPivotHierarchyCollection#load~0:complex'
   - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#load:member(2)'
-    summary: <span data-ttu-id="c56b8-121">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="c56b8-121">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c56b8-122">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="c56b8-122">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -161,11 +161,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="c56b8-123">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="c56b8-123">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#load:member(3)'
-    summary: <span data-ttu-id="c56b8-124">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="c56b8-124">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c56b8-125">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="c56b8-125">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -179,14 +179,14 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="c56b8-126">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="c56b8-126">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#remove:member(1)'
     summary: |-
-      <span data-ttu-id="c56b8-127">从当前轴删除 PivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="c56b8-127">Removes the PivotHierarchy from the current axis.</span></span>
+      从当前轴删除 PivotHierarchy。
 
-      <span data-ttu-id="c56b8-128">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c56b8-128">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: remove(rowColumnPivotHierarchy)
     fullName: remove(rowColumnPivotHierarchy)
     langs:
@@ -204,7 +204,7 @@ items:
           type:
             - 'excel!Excel.RowColumnPivotHierarchy:class'
   - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="c56b8-129">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="c56b8-129">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="c56b8-130">.</span><span class="sxs-lookup"><span data-stu-id="c56b8-130"></span></span> <span data-ttu-id="c56b8-131">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="c56b8-131"></span></span><!-- --><span data-ttu-id="c56b8-132">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.RowColumnPivotHierarchyCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RowColumnPivotHierarchyCollectionData`</span><span class="sxs-lookup"><span data-stu-id="c56b8-132">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.RowColumnPivotHierarchyCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.RowColumnPivotHierarchyCollectionData`</span></span><!-- --><span data-ttu-id="c56b8-133">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="c56b8-133">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.RowColumnPivotHierarchyCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RowColumnPivotHierarchyCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -217,7 +217,7 @@ items:
           - 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RowColumnPivotHierarchy:class'
     name: Excel.RowColumnPivotHierarchy
@@ -229,7 +229,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -257,7 +257,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionData:interface'
     name: Excel.Interfaces.RowColumnPivotHierarchyCollectionData
