--- a/docs/docs-ref-autogen/excel/excel/excel.table.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.table.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Table#autoFilter:member'
@@ -53,7 +53,7 @@ items:
       - 'excel!Excel.Table#worksheet:member'
   - uid: 'excel!Excel.Table#autoFilter:member'
     summary: |-
-      表示表格的 AutoFilter 对象。 只读。
+      表示表格的 AutoFilter 对象。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoFilter
@@ -101,7 +101,7 @@ items:
         description: ''
   - uid: 'excel!Excel.Table#columns:member'
     summary: |-
-      表示表中所有列的集合。 只读。
+      表示表中所有列的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columns
@@ -338,7 +338,7 @@ items:
           ```
   - uid: 'excel!Excel.Table#highlightFirstColumn:member'
     summary: |-
-      指明第一列是否包含特殊格式。
+      指定第一列是否包含特殊格式。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: highlightFirstColumn
@@ -353,7 +353,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Table#highlightLastColumn:member'
     summary: |-
-      指明最后一列是否包含特殊格式。
+      指定最后一列是否包含特殊格式。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: highlightLastColumn
@@ -368,7 +368,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Table#id:member'
     summary: |-
-      返回用于唯一标识指定工作簿中表的值。即使表被重命名，标识符的值仍然相同。只读。
+      返回用于唯一标识指定工作簿中表的值。 即使表被重命名，标识符的值仍保持不变。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -605,7 +605,7 @@ items:
         description: ''
   - uid: 'excel!Excel.Table#rows:member'
     summary: |-
-      表示表中所有行的集合。 只读。
+      表示表中所有行的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rows
@@ -643,7 +643,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.Table#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -686,7 +686,7 @@ items:
             - 'excel!Excel.Table#setStyle~0:complex'
   - uid: 'excel!Excel.Table#showBandedColumns:member'
     summary: |-
-      指明列是否采用镶边格式来以不同的方式突出显示奇数列与偶数列，让表更易于阅读。
+      指定列是否显示镶边格式，其中奇数列以不同的方式突出显示，即使是偶数，也可以使表更易于阅读。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showBandedColumns
@@ -701,7 +701,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Table#showBandedRows:member'
     summary: |-
-      指明行是否采用镶边格式来以不同的方式突出显示奇数行与偶数行，让表更易于阅读。
+      指定行是否显示镶边格式，其中奇数行以不同的方式突出显示，即使是偶数行，也可以使表更易于阅读。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showBandedRows
@@ -716,7 +716,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Table#showFilterButton:member'
     summary: |-
-      指明是否在每个列标题的顶部显示筛选器按钮。仅当 table 中包含标题行时，才允许设定此设置。
+      指定筛选按钮是否显示在每个列标头的顶部。 仅当 table 中包含标题行时，才允许设定此设置。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showFilterButton
@@ -731,7 +731,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Table#showHeaders:member'
     summary: |-
-      指示标头行是否可见。 该值可以设置为显示或删除标头行。
+      指定标题行是否可见。 该值可以设置为显示或删除标头行。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showHeaders
@@ -746,7 +746,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Table#showTotals:member'
     summary: |-
-      指示总计行是否可见。 该值可以设置为显示或删除总计行。
+      指定汇总行是否可见。 该值可以设置为显示或删除总计行。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showTotals
@@ -761,7 +761,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Table#sort:member'
     summary: |-
-      表示表的排序。 只读。
+      表示表的排序。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: sort
@@ -844,7 +844,7 @@ items:
         description: ''
   - uid: 'excel!Excel.Table#worksheet:member'
     summary: |-
-      包含当前表格的工作表。 只读。
+      包含当前表格的工作表。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
@@ -858,7 +858,7 @@ items:
         type:
           - 'excel!Excel.Worksheet:class'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.AutoFilter:class'
     name: Excel.AutoFilter
@@ -876,7 +876,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.TableChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.TableChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -890,7 +890,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.TableFilteredEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.TableFilteredEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -904,7 +904,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.TableSelectionChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.TableSelectionChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -918,7 +918,7 @@ references:
     name: Excel.TableRowCollection
   - uid: 'excel!Excel.Interfaces.TableUpdateData:interface'
     name: Interfaces.TableUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Table#setStyle~0:complex'
     name: string | PivotTableStyle | BuiltInTableStyle
